# singer-demo

./: README.md  readme.md
tap-randomdata/: MANIFEST.in  README.md  catalog-2.json  catalog.json  pyproject.toml  sample_config.json  setup.py
tap-randomdata/tap_randomdata/: __init__.py
tap-randomdata/tap_randomdata/schemas/: address.json  company.json  food.json  restaurant.json  vehicle.json
target-localjson/: README.md  pyproject.toml  sample_config.json
target-localjson/target_localjson/: __init__.py
