[tool.poetry]
name = "tap-randomdata"
version = "0.1.0"
description = "tap to generate random data from https://random-data-api.com/"
authors = ["Wallace Prado <wprado@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
singer-python = "^5.12.1"

[tool.poetry.dev-dependencies]
pylint = "^2.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
